--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_jspbean_business_template.html
@@ -65,7 +65,7 @@ public class ${business_class.businessClass}JspBean extends ${feature_name}JspBe
     // Constants
 
     // templates
-    private static final String TEMPLATE_MANAGE_${business_class.businessClassTemplateDeclaration}S="/admin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClassTemplate}.html";
+    private static final String TEMPLATE_MANAGE_${business_class.businessClassTemplateDeclaration}S="/admin/plugins/${plugin_model.pluginName}/manage_${business_class.businessClassTemplate}s.html";
     private static final String TEMPLATE_CREATE_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/create_${business_class.businessClassTemplate}.html";
     private static final String TEMPLATE_MODIFY_${business_class.businessClassTemplateDeclaration}="/admin/plugins/${plugin_model.pluginName}/modify_${business_class.businessClassTemplate}.html";
 
