--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_pom_xml.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_pom_xml.html
@@ -8,10 +8,10 @@
 
 	<modelVersion>${pom_model_version}</modelVersion>
 	<groupId>fr.paris.lutece.plugins</groupId>
-	<artifactId>plugin-${plugin.pluginName}</artifactId>
+	<artifactId>plugin-${plugin.pluginName?lower_case}</artifactId>
 	<packaging>lutece-plugin</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Lutece ${plugin.pluginName?cap_first} plugin</name>
+	<name>Lutece ${plugin.pluginName?lower_case} plugin</name>
 
 	<repositories>
 	  <repository>
