--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_xml_template.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_xml_template.html
@@ -23,7 +23,7 @@
             <feature-title>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.name</feature-title>
             <feature-description>${plugin.pluginName}.adminFeature.${feature.pluginFeatureName?lower_case}.description</feature-description>
             <feature-level>${feature.pluginFeatureLevel}</feature-level>
-            <feature-url>jsp/admin/plugins/${plugin.pluginName}/${feature.pluginFeatureName}.jsp</feature-url>
+            <feature-url>jsp/admin/plugins/${plugin.pluginName}/${feature.jspName}</feature-url>
             <feature-icon-url></feature-icon-url>
       </admin-feature>
       </#list>
