PLUGINWIZARD-40 : Manage several generation schemes
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49698 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_admin_features.html
@@ -41,11 +41,11 @@
 
                     <td>${feature.pluginFeatureLevel}</td>
                     <td>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_admin_feature&plugin_id=${plugin_id}&feature_id=${feature.Publish}" 
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_admin_feature&plugin_id=${plugin_id}&feature_id=${feature.id}" 
                            class="btn btn-primary btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}">
                             <i class="icon-edit icon-white"></i>
                         </a>
-                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_admin_feature&plugin_id=${plugin_id}&feature_id=${feature.Publish}" 
+                        <a href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_admin_feature&plugin_id=${plugin_id}&feature_id=${feature.id}" 
                            class="btn btn-danger btn-small" title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}">
                             <i class="icon-trash icon-white"></i>
                         </a>
