PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49751 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_properties_keys.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/templates/pluginwizard_properties_keys.html
@@ -1,7 +1,7 @@
 plugin.description
 plugin.provider
 
-<#list features as feature>
+<#list plugin.features as feature>
 adminFeature.${feature.pluginFeatureName?lower_case}.name
 adminFeature.${feature.pluginFeatureName?lower_case}.description
 </#list>
@@ -9,7 +9,7 @@ adminFeature.${feature.pluginFeatureName?lower_case}.description
 manage_${plugin_name?lower_case}s.tableLabel
 manage_${plugin_name?lower_case}s.labelManagement
 manage_${plugin_name?lower_case}s.pageTitle
-<#list list_business_class as business_class>
+<#list plugin.businessClasses as business_class>
 <#if business_class?? > 
 manage_${business_class.businessClassTemplate}s.pageTitle
 manage_${business_class.businessClassTemplate}s.tableLabel
@@ -48,7 +48,7 @@ modify_${business_class.businessClassTemplate}.buttonValidate
 message.confirmRemove${business_class.businessClassTemplate?cap_first}
 </#if>    
 </#list>
-<#list portlets as portlet>
+<#list plugin.portlets as portlet>
 <#if portlet?? >
 <#assign nBeginIndex = portlet.pluginPortletTypeName?last_index_of("_")><#assign portletName = portlet.pluginPortletTypeName?substring(0, nBeginIndex)?lower_case>
 
