PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49752 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_attribute.html
@@ -19,7 +19,7 @@
                 <input type="hidden" name="action" value="do_modify_attribute" />
                 <input type="hidden" name="business_class_id" value="${business_class_id}" />
                 <input type="hidden" name="plugin_id" value="${plugin_id}" />
-                <input type="hidden" name="attribute_id" value="${attribute.idAttribute}" />   
+                <input type="hidden" name="attribute_id" value="${attribute.id}" />   
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_attribute.labelAttributeName} * : </label>      
