PLUGINWIZARD-45 : Store the plugin's model in a flexible JSON structure instead of tables
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49753 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_applications.html
@@ -46,12 +46,12 @@
                     <td>
 
 
-                        <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&page=pluginwizard&action=modify_plugin_application&plugin_id=${plugin_id}&application_id=${plugin_application.idPluginApplication}" 
+                        <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&page=pluginwizard&action=modify_plugin_application&plugin_id=${plugin_id}&application_id=${plugin_application.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonModifyApplication}" >
                             <i class="icon-edit icon-white"></i>
                         </a>
 
-                        <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&page=pluginwizard&action=remove_plugin_application&plugin_id=${plugin_id}&application_id=${plugin_application.idPluginApplication}" 
+                        <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&page=pluginwizard&action=remove_plugin_application&plugin_id=${plugin_id}&application_id=${plugin_application.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_applications.buttonRemoveApplication}" >
                             <i class="icon-trash icon-white"></i>
                         </a>
