--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_manage_plugin_portlets.html
@@ -50,11 +50,11 @@
                     <td>${plugin_portlet.pluginPortletUpdateUrl}</td>
 
                     <td>
-                        <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_portlet&plugin_id=${plugin_id}&portlet_id=${plugin_portlet.pluginPortletId}" 
+                        <a class="btn btn-primary btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=modify_portlet&plugin_id=${plugin_id}&portlet_id=${plugin_portlet.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonModifyFeature}" >
                             <i class="icon-edit icon-white"></i>
                         </a>
-                        <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_plugin_portlet&plugin_id=${plugin_id}&portlet_id=${plugin_portlet.pluginPortletId}" 
+                        <a class="btn btn-danger btn-small" href="jsp/site/Portal.jsp?page=pluginwizard&action=remove_plugin_portlet&plugin_id=${plugin_id}&portlet_id=${plugin_portlet.id}" 
                            title="#i18n{pluginwizard.pluginwizard_manage_plugin_admin_features.buttonRemoveFeature}" >
                             <i class="icon-trash icon-white"></i>
                         </a>
