--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_application.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_application.html
@@ -16,7 +16,7 @@
                 <input type="hidden" name="page" value="wizard" />                
                 <input type="hidden" name="action" value="do_modify_application" />                
                 <input type="hidden" name="plugin_id" value="${plugin_model.idPlugin}" />                   
-                <input type="hidden" name="application_id" value="${application.idPluginApplication}" />                                            
+                <input type="hidden" name="application_id" value="${application.id}" />                                            
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_plugin_application.labelApplicationName} :</label>  
