--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_portlet.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_portlet.html
@@ -18,7 +18,7 @@
                 <input type="hidden" name="page" value="pluginwizard" />
                 <input type="hidden" name="action" value="do_modify_portlet" />
                 <input type="hidden" name="plugin_id" value="${portlet.idPlugin}" />
-                <input type="hidden" name="portlet_id" value="${portlet.pluginPortletId}" />  
+                <input type="hidden" name="portlet_id" value="${portlet.id}" />  
 
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_modify_plugin_portlet.labelPortletClass} :</label>
